--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <strong><a href="https://www.instagram.com/thejus_pradeep/">Instagram</a></strong>
     <p>This means the right one to use depends on the situation. Neither is for purely decorative purposes, that's what CSS styling is for.</p>-->
     <hr>
-    <h3><a href="C:\Users\Thejus\.vscode\practice\html\HTML personal SITE\likes.html    
-        "> likes and disliikes</a></h3>
+    <h3><a href="likes.html"> likes and disliikes</a></h3>
      <ol>
         <li>like both tea and coffe</li>
         <li>like to sleep</li>
