--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         </tr>
      </table>
      <hr>
-     <a href="C:\Users\Thejus\.vscode\practice\html\HTML personal SITE\contact.html">Contact me</a>
+     <a href="contact.html">Contact me</a>
 </body>
 </html>
